# trajectory_visualization

./: CMakeLists.txt  package.xml  rviz_traj.rviz
launch/: visualize_traj.launch
src/: visualize_traj.cpp  visualize_traj.hpp
